--- a/style.css
+++ b/style.css
@@ -21,30 +21,55 @@
 
 .bar-title{
   color: white;
+  font-family: 'PT Serif', serif;
 }
 
 .menu{
   margin-left: 10px;
 }
 
+.menu-content{
+  font-family: 'Quicksand', sans-serif;
+}
+
 .bar-banner{
   position: relative;
 }
 
-.search{
+#search{
+  position: relative;
   border: 2px solid rgba(250, 250, 250, 0.3);
   border-radius: 6px;
-  padding: 10px 15px;
-  color: rgba(250, 250, 250, 0.6);
+  padding: 10px 25px;
+  background-color: #353336;
+  /* color: rgba(250, 250, 250, 0.6); */
   width: 90%;
+  font-style: italic;
+}
+
+#search:focus{
+  outline: none;
 }
 
 .fa-magnifying-glass{
+  position: absolute;
   color: white;
   opacity: 0.7;
-  margin-right: 5px;
-  margin-left: -7px;
+  z-index: 1;
+  margin-top: 11px;
+  margin-left: 8px;
+  cursor: pointer;
+  font-size: 15px;
 }
+
+.fa-magnifying-glass:hover{
+  opacity: 0.9;
+}
+
+input, select, textarea{
+  color: white;
+}
+
 
 .info{
   position: absolute;
@@ -61,6 +86,7 @@
 .table{
   color: #CDA97C;
   margin-top: 5px;
+  font-family: 'Quicksand', sans-serif;
 }
 
 .table-num{
