--- a/components/button.css
+++ b/components/button.css
@@ -7,7 +7,7 @@
   margin-left: 10px;
   border-radius: 20px;
   font-size: 15px;
-  color: green;
+  /* color: green; */
   z-index: 1;
   bottom: 18px;
   display: flex;
