--- a/components/button.css
+++ b/components/button.css
@@ -2,6 +2,7 @@
 .bar-status{
   position: absolute;
   background-color: white;
+  font-family: 'Quicksand', sans-serif;
   padding: 5px 15px;
   width: 50px;
   margin-left: 10px;
