--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url(components/avatar.css);
 @import url(components/button.css);
 @import url(components/card.css);
+@import url(components/popup.css);
 
 .body{
   background-color: black;
