--- a/style.css
+++ b/style.css
@@ -3,9 +3,12 @@
 @import url(components/card.css);
 @import url(components/popup.css);
 
-.body{
-  background-color: black;
+body{
+  /* background-image: url(https://images.unsplash.com/photo-1473116763249-2faaef81ccda?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1496&q=80); */
+  /* background-size: cover; */
+  background-color: rgba(205, 169, 124, 0.7);
 }
+
 
 .container{
   /* border: 1px solid red; */
